Improve waybar config

--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -1,134 +1,183 @@
-/* `otf-font-awesome` is required to be installed for icons */
+
+/*base background color*/
+@define-color bg_main rgba(25, 25, 25, 0.65);
+@define-color bg_main_tooltip rgba(0, 0, 0, 0.7);
+
+
+/*base background color of selections */
+@define-color bg_hover rgba(200, 200, 200, 0.3);
+/*base background color of active elements */
+@define-color bg_active rgba(100, 100, 100, 0.5);
+
+/*base border color*/
+@define-color border_main rgba(255, 255, 255, 0.2);
+
+/*text color for entries, views and content in general */
+@define-color content_main white;
+/*text color for entries that are unselected */
+@define-color content_inactive rgba(255, 255, 255, 0.25);
 
 * {
+	text-shadow: none;
+	box-shadow: none;
   border: none;
   border-radius: 0;
-  font-family: Liberation Mono;
-  min-height: 20px;
+	font-family: "Segoe UI", "Ubuntu";
+  font-weight: 600;
+  font-size: 12.7px;
+	
+	
 }
 
 window#waybar {
-  background: transparent;
+  background:  @bg_main;
+  border-top: 1px solid @border_main;
+  color: @content_main;
 }
 
-window#waybar.hidden {
-  opacity: 0.2;
+tooltip {
+  background: @bg_main_tooltip;
+  border-radius: 5px;
+  border-width: 1px;
+  border-style: solid;
+  border-color: @border_main;
+}
+tooltip label{
+  color: @content_main;
+}
+
+#custom-os_button {
+	font-family: "JetBrainsMono Nerd Font";
+  font-size: 24px;
+	padding-left: 12px;
+	padding-right: 20px;
+	transition: all 0.25s cubic-bezier(0.165, 0.84, 0.44, 1);
+}
+#custom-os_button:hover {
+  background:  @bg_hover;
+	color: @content_main;
 }
 
 #workspaces {
-  margin-right: 8px;
-  border-radius: 10px;
-  transition: none;
-  background: #383c4a;
+  color: transparent;
+	margin-right: 1.5px;
+	margin-left: 1.5px;
 }
-
 #workspaces button {
-  transition: none;
-  color: #7c818c;
-  background: transparent;
-  padding: 5px;
-  font-size: 18px;
+  padding: 3px;
+  color: @content_inactive;
+	transition: all 0.25s cubic-bezier(0.165, 0.84, 0.44, 1);
 }
-
-#workspaces button.persistent {
-  color: #7c818c;
-  font-size: 12px;
+#workspaces button.active {
+	color: @content_main;
+	border-bottom: 3px solid white;
 }
-
-#workspaces button:hover {
-  transition: none;
-  box-shadow: inherit;
-  text-shadow: inherit;
-  border-radius: inherit;
-  color: #383c4a;
-  background: #7c818c;
-}
-
 #workspaces button.focused {
-  color: white;
+  color: @bg_active;
+}
+#workspaces button.urgent {
+	background:  rgba(255, 200, 0, 0.35);
+	border-bottom: 3px dashed @warning_color;
+	color: @warning_color;
+}
+#workspaces button:hover {
+  background: @bg_hover;
+	color: @content_main;
 }
 
-#language {
-  padding-left: 16px;
+#taskbar {
+}
+
+#taskbar button {
+	min-width: 130px;
+	border-bottom: 3px solid rgba(255, 255, 255, 0.3);
+	margin-left: 2px;
+	margin-right: 2px;
+  padding-left: 8px;
   padding-right: 8px;
-  border-radius: 10px 0px 0px 10px;
-  transition: none;
-  color: #ffffff;
-  background: #383c4a;
+  color: white;
+	transition: all 0.25s cubic-bezier(0.165, 0.84, 0.44, 1);
 }
 
-#mode {
-  padding-left: 16px;
-  padding-right: 16px;
-  border-radius: 10px;
-  transition: none;
-  color: #ffffff;
-  background: #383c4a;
+#taskbar button.active {
+	border-bottom: 3px solid white;
+  background: @bg_active;
 }
 
-#clock {
-  padding-left: 16px;
-  padding-right: 16px;
-  border-radius: 10px 0px 0px 10px;
-  transition: none;
-  color: #ffffff;
-  background: #383c4a;
+#taskbar button:hover {
+	border-bottom: 3px solid white;
+  background: @bg_hover;
+	color: @content_main;
 }
 
-#pulseaudio {
-  margin-right: 8px;
-  padding-left: 16px;
-  padding-right: 16px;
-  border-radius: 10px;
-  transition: none;
-  color: #ffffff;
-  background: #383c4a;
-}
-
-#pulseaudio.muted {
-  background-color: #90b1b1;
-  color: #2a5c45;
-}
-
-#memory {
-  margin-right: 8px;
-  padding-left: 16px;
-  padding-right: 16px;
-  border-radius: 10px;
-  transition: none;
-  color: #ffffff;
-  background: #383c4a;
+#cpu, #disk, #memory {
+	padding:3px;
 }
 
 #temperature {
-  margin-right: 8px;
-  padding-left: 16px;
-  padding-right: 16px;
-  border-radius: 10px;
-  transition: none;
-  color: #ffffff;
-  background: #383c4a;
+	color: transparent;
+	font-size: 0px;
+	transition: all 0.25s cubic-bezier(0.165, 0.84, 0.44, 1);
 }
-
 #temperature.critical {
-  background-color: #eb4d4b;
+	padding-right: 3px;
+	color: @warning_color;
+	font-size: initial;
+	border-bottom: 3px dashed @warning_color;
+	transition: all 0.25s cubic-bezier(0.165, 0.84, 0.44, 1);
 }
 
-#backlight {
-  margin-right: 8px;
-  padding-left: 16px;
-  padding-right: 16px;
+#window {
   border-radius: 10px;
-  transition: none;
-  color: #ffffff;
-  background: #383c4a;
+  margin-left: 20px;
+  margin-right: 20px;
 }
 
-#tray {
-  padding-left: 16px;
-  padding-right: 16px;
-  border-radius: 10px;
-  transition: none;
-  color: #ffffff;
-  background: #383c4a;
+#tray{
+  margin-left: 5px;
+  margin-right: 5px;
+}
+#tray > .passive {
+	border-bottom: none;
+}
+#tray > .active {
+	border-bottom: 3px solid white;
+}
+#tray > .needs-attention {
+	border-bottom: 3px solid @warning_color;
+}
+#tray > widget {
+	transition: all 0.25s cubic-bezier(0.165, 0.84, 0.44, 1);
+}
+#tray > widget:hover {
+	background: @bg_hover;
+}
+
+#pulseaudio {
+	font-family: "JetBrainsMono Nerd Font";
+	padding-left: 3px;
+  padding-right: 3px;
+	transition: all 0.25s cubic-bezier(0.165, 0.84, 0.44, 1);
+}
+#pulseaudio:hover {
+ 	background: @bg_hover;
+}
+
+#network {
+	padding-left: 3px;
+  padding-right: 3px;
+}
+
+#language {
+  padding-left: 5px;
+  padding-right: 5px;
+}
+
+#clock {
+  padding-right: 5px;
+  padding-left: 5px;
+	transition: all 0.25s cubic-bezier(0.165, 0.84, 0.44, 1);
+}
+#clock:hover {
+	background: @bg_hover;
 }
