improve sway/waybar config

--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -1,19 +1,77 @@
+@define-color background #282a36;
+@define-color selection #44475a;
+@define-color foreground #f8f8f2;
+@define-color comment #6272a4;
+@define-color cyan #8be9fd;
+@define-color green #50fa7b;
+@define-color orange #ffb86c;
+@define-color pink #ff79c6;
+@define-color purple #bd93f9;
+@define-color red #ff5555;
+@define-color yellow #f1fa8c;
+
 * {
-	text-shadow: none;
-	box-shadow: none;
-  	border: none;
-  	border-radius: 0;
-	font-family: FontAwesome, "Ubuntu";
-  	font-weight: 600;
-  	font-size: 12px;
+  font-family: FontAwesome, "Ubuntu";
+  font-weight: 600;
+  font-size: 12px;
+  border: none;
+  border-radius: 0;
+  box-shadow: none;
+  text-shadow: none;
+  padding: 0;
+  margin: 0;
 }
 
 window#waybar {
-	color: rgba(255, 255, 255, 1);
-  	background: rgba(0, 0, 0, 0.7);
-	margin: 0;
+  color: @foreground;
+  background-color: @background;
 }
 
-.module {
-	padding: 5px;
+#language,
+#temperature,
+#disk,
+#memory,
+#network,
+#pulseaudio,
+#tray,
+#clock
+{
+  color: @orange;
+  padding: 0 4px;
+}
+
+#workspaces {
+  margin-right: 4px;
+}
+
+#workspaces button {
+  color: @orange;
+  padding: 0 4px;
+  border-top: 2px solid transparent;
+}
+
+#workspaces button:hover {
+  border-top: 2px solid @foreground;
+  background: @background;
+}
+
+#workspaces button.focused {
+  border-top: 2px solid @foreground;
+}
+
+#workspaces button.active {
+  border-top: 2px solid @foreground;
+}
+
+#workspaces button.urgent {
+  border-top: 2px solid @red;
+}
+
+#window {
+  color: @orange;
+  margin-left: 8px;
+}
+
+#custom-separator {
+  color: @foreground;
 }
