--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -41,7 +41,7 @@ window#waybar {
 }
 
 #workspaces {
-  margin-right: 4px;
+  margin-right: 16px;
 }
 
 #workspaces button {
@@ -70,6 +70,10 @@ window#waybar {
 #window {
   color: @orange;
   margin-left: 8px;
+}
+
+#mpris {
+
 }
 
 #custom-separator {
