--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -1,19 +1,15 @@
-@define-color background #282a36;
-@define-color selection #44475a;
-@define-color foreground #f8f8f2;
-@define-color comment #6272a4;
-@define-color cyan #8be9fd;
-@define-color green #50fa7b;
-@define-color orange #ffb86c;
-@define-color pink #ff79c6;
-@define-color purple #bd93f9;
-@define-color red #ff5555;
-@define-color yellow #f1fa8c;
+@define-color background #1f252b;
+@define-color foreground #f0fbf8;
+@define-color red        rgb(177,102,108);
+@define-color green      rgb(169,189,145);
+@define-color yellow     rgb(229,204,147);
+@define-color blue       rgb(137,160,190);
+@define-color magenta    rgb(173,144,171);
 
 * {
-  font-family: "Ubuntu";
+  font-family: "Victor Mono";
   font-weight: 400;
-  font-size: 14px;
+  font-size: 12px;
   border: none;
   border-radius: 0;
   box-shadow: none;
@@ -27,29 +23,8 @@
   background: @background;
 }
 
-.modules-right > * {
-  color: @background;
-  background: @foreground;
-  padding: 0 8px;
-}
-
-.modules-right > * label {
-  padding: 0 4px;
-}
-
-.modules-right > *:nth-child(1) {
-  color: @background;
-  background: @green;
-}
-
-.modules-right > *:nth-child(2) {
-  color: @background;
-  background: @yellow;
-}
-
-.modules-right > *:nth-child(3) {
-  color: @background;
-  background: @cyan;
+.modules-right > * > label {
+  padding-left: 16px;
 }
 
 #workspaces button {
@@ -71,11 +46,6 @@
 #workspaces button.urgent {
   color: @background;
   background: @red;
-}
-
-#mpris {
-  font-size: 12px;
-  margin-left: 32px;
 }
 
 #clock {
